--- a/.gitconfig
+++ b/.gitconfig
@@ -24,21 +24,30 @@
 	lg1 = log --graph --abbrev-commit --decorate --date=relative --format=format:'%C(bold blue)%h%C(reset) - %C(bold green)(%ar)%C(reset) %C(white)%s%C(reset) %C(dim white)- %an%C(reset)%C(bold yellow)%d%C(reset)' --all
 	lg2 = log --graph --abbrev-commit --decorate --format=format:'%C(bold blue)%h%C(reset) - %C(bold cyan)%aD%C(reset) %C(bold green)(%ar)%C(reset)%C(bold yellow)%d%C(reset)%n''          %C(white)%s%C(reset) %C(dim white)- %an%C(reset)' --all
 	lg = !"git lg1"
-	upstream-name = !git remote | egrep -o '(upstream|origin)' | tail -1
+	default-branch = "!git symbolic-ref refs/remotes/origin/HEAD | sed 's#^refs/remotes/origin/##'"
+	pull-default = "!f() { \
+		if [[ -n $(git status -s) ]]; then \
+			echo 'ERROR: Working tree must be clean before pulling.'; \
+		else \
+			default_branch=$(git default-branch); \
+			git checkout --quiet \"$default_branch\" && \
+			git pull --quiet; \
+		fi \
+	}; f"
 	prune-merged = "!f() { \
-	local head_branch=$(git symbolic-ref --short HEAD); \
-	git fetch --prune; \
-	local branches_to_delete=$(git branch --merged $(git upstream-name)/$(git remote show $(git upstream-name) | awk '/HEAD branch/ {print $NF}') \
-		| grep --invert-match '\\*' \
-		| tr '\\n' ' ' \
-		| xargs); \
-	if [ -n \"$branches_to_delete\" ]; then \
-		git checkout --quiet $(git remote show $(git upstream-name) | awk '/HEAD branch/ {print $NF}'); \
-		git branch --delete $branches_to_delete; \
-		echo \"Pruned branches: $branches_to_delete\"; \
-		git checkout --quiet $head_branch; \
-	else \
-		echo \"No branches to prune.\"; \
-	fi \
+		if ! git diff --quiet; then \
+			echo 'Error: You have uncommitted changes. Please commit or stash them first.'; \
+			exit 1; \
+		fi; \
+		git pull-default && \
+		default_branch=$(git default-branch) && \
+		merged_branches=$(git branch --merged \"$default_branch\" | grep --invert-match \"\\*\" | xargs); \
+		if [[ -n \"$merged_branches\" ]]; then \
+			git checkout --quiet \"$default_branch\" && \
+			git branch --delete $merged_branches && \
+			echo \"Pruning Complete\"; \
+		else \
+			echo \"No branches to prune.\"; \
+		fi \
 	}; f"
   
